[bdist_wheel]
universal = 1

[coverage:report]
omit = burpui/_compat.py

[metadata]
provides-extra =
    sql
    extra
    ldap_authentication
    gunicorn
    agent
    celery
    limit
    ci
requires-dist =
    ldap3; extra == 'ldap_authentication'
    gevent; extra in ['agent', 'gunicorn']
    gunicorn; extra == 'gunicorn'
    Flask-Session==0.3.0; extra == 'extra'
    redis; extra in ['extra', 'celery', 'limit']
    ujson; extra == 'extra'
    Celery; extra == 'celery'
    Flask-SQLAlchemy; extra == 'sql'
    Flask-Migrate>=2.0.3; extra == 'sql'
    sqlalchemy-utils; extra == 'sql'
    Flask-Limiter; extra == 'limit'
